fix spacing issues around statuses

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -35,7 +35,7 @@ ol {
 }
 
 ul {
-  @apply list-disc pl-gutter space-y-2;
+  @apply list-disc;
 }
 
 p + ol, p + ul {
